--- a/login.html
+++ b/login.html
@@ -1,13 +1,121 @@
-<!-- login.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <title>EverFrost - Connexion</title>
-  <!-- Colle ici le même CSS que register.html (ou mets-le dans un fichier commun) -->
   <style>
-    /* Copie le même style que dans register.html */
-    /* ... */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #282c34;
+      color: white;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      text-align: center;
+      width: 320px;
+      background: #3a3f4b;
+      padding: 2.5rem 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(33, 161, 241, 0.7);
+      position: relative;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      color: #61dafb;
+    }
+    label {
+      display: block;
+      text-align: left;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+      color: #aad4ff;
+    }
+    input[type="email"], input[type="password"] {
+      width: 100%;
+      padding: 0.7rem 1rem;
+      margin-bottom: 1.5rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      background: #20252e;
+      color: white;
+      outline: none;
+      box-sizing: border-box;
+      transition: background 0.3s ease;
+    }
+    input[type="email"]:focus, input[type="password"]:focus {
+      background: #2a2f3b;
+      box-shadow: 0 0 8px #61dafb;
+    }
+    button {
+      width: 100%;
+      padding: 1rem;
+      background: #61dafb;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #282c34;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      letter-spacing: 0.05em;
+    }
+    button:hover {
+      background: #21a1f1;
+      color: white;
+    }
+    .help-circle {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      background: #61dafb;
+      color: #282c34;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 32px;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 0 8px #61dafb;
+    }
+    .help-message {
+      display: none;
+      background: #20252e;
+      color: #aad4ff;
+      padding: 1rem;
+      border-radius: 8px;
+      font-size: 0.9rem;
+      margin-top: 0.5rem;
+      text-align: center;
+    }
+    .help-circle.active + .help-message {
+      display: block;
+    }
+    .bottom-text {
+      margin-top: 1.5rem;
+      font-size: 0.95rem;
+      color: #aad4ff;
+    }
+    .bottom-text a {
+      color: #61dafb;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    .bottom-text a:hover {
+      color: #21a1f1;
+      text-decoration: underline;
+    }
+    .error-message {
+      color: #ff4c4c;
+      margin-bottom: 1rem;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
@@ -16,6 +124,8 @@
     <div class="help-message" id="helpMsg">Si vous avez perdu votre mot de passe, demandez à Kenzo.</div>
     
     <h1>Connexion</h1>
+
+    <div class="error-message" id="errorMsg"></div>
 
     <form id="loginForm">
       <label for="email">Adresse e-mail</label>
@@ -32,17 +142,53 @@
     </div>
   </div>
 
+  <!-- Firebase CDN & Config à ajouter ici -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script>
+    // Ta config Firebase ici (remplace par la tienne)
+    const firebaseConfig = {
+      apiKey: "TA_API_KEY",
+      authDomain: "TON_DOMAINE.firebaseapp.com",
+      projectId: "TON_PROJECT_ID",
+      storageBucket: "TON_BUCKET.appspot.com",
+      messagingSenderId: "TON_SENDER_ID",
+      appId: "TON_APP_ID"
+    };
+
+    // Initialiser Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // Gestion bouton d'aide
     const helpBtn = document.getElementById('helpBtn');
     helpBtn.addEventListener('click', () => {
       helpBtn.classList.toggle('active');
     });
 
-    document.getElementById('loginForm').addEventListener('submit', e => {
+    const loginForm = document.getElementById('loginForm');
+    const errorMsg = document.getElementById('errorMsg');
+
+    loginForm.addEventListener('submit', (e) => {
       e.preventDefault();
-      // Ici tu peux intégrer la connexion Firebase
-      alert("Connexion en cours... (à implémenter)");
+      errorMsg.textContent = ""; // reset erreur
+      
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
+
+      auth.signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          // Connexion réussie
+          alert("Connexion réussie ! Redirection en cours...");
+          // Rediriger par exemple vers home.html
+          window.location.href = "home.html";
+        })
+        .catch((error) => {
+          // Afficher l'erreur proprement
+          errorMsg.textContent = error.message;
+        });
     });
   </script>
 </body>
 </html>
+
