--- a/index.html
+++ b/index.html
@@ -1,46 +1,221 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>EverFrost - Bienvenue</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Connexion / Inscription - Kylita</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #282c34;
-      color: white;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 2rem;
-    }
-    a {
-      background: #61dafb;
-      color: black;
-      padding: 1rem 2rem;
-      margin: 0.5rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1.2rem;
-      transition: background 0.3s ease;
-    }
-    a:hover {
-      background: #21a1f1;
-      color: white;
-    }
-    .container {
-      text-align: center;
-    }
+    :root{--bg:#0f1724;--card:#111827;--accent:#06b6d4;--muted:#9ca3af;color-scheme:dark}
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial}
+    body{background:linear-gradient(180deg,#071428 0%, #071a2a 60%);display:flex;align-items:center;justify-content:center;padding:24px;color:#e6eef6}
+    .wrap{width:100%;max-width:920px;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:12px;box-shadow:0 6px 30px rgba(2,6,23,0.6);display:grid;grid-template-columns:1fr 420px;overflow:hidden}
+    .hero{padding:40px;display:flex;flex-direction:column;gap:18px}
+    .hero h1{margin:0;font-size:28px}
+    .hero p{margin:0;color:var(--muted)}
+    .features{margin-top:12px;display:grid;grid-template-columns:repeat(2,1fr);gap:10px}
+    .feat{background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;font-size:13px}
+
+    .card{padding:28px;background:rgba(2,6,23,0.6);display:flex;flex-direction:column;gap:14px}
+    .tabs{display:flex;gap:6px}
+    .tab{flex:1;padding:10px;border-radius:8px;text-align:center;cursor:pointer;font-weight:600;background:transparent;border:1px solid rgba(255,255,255,0.03)}
+    .tab.active{background:linear-gradient(90deg,var(--accent),#7c3aed);color:#051023}
+    form{display:flex;flex-direction:column;gap:10px}
+    label{font-size:13px;color:var(--muted)}
+    input[type=text],input[type=email],input[type=password]{width:100%;padding:12px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:rgba(255,255,255,0.02);color:inherit}
+    .row{display:flex;gap:10px}
+    .btn{padding:12px;border-radius:10px;border:0;font-weight:700;cursor:pointer}
+    .btn.primary{background:var(--accent);color:#052024}
+    .btn.ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)}
+    .small{font-size:13px;color:var(--muted)}
+    .error{color:#ffb4b4;background:rgba(255,64,64,0.06);padding:8px;border-radius:8px}
+    .success{color:#b8ffea;background:rgba(40,200,150,0.06);padding:8px;border-radius:8px}
+    .meta{display:flex;justify-content:space-between;align-items:center}
+    footer{font-size:12px;color:var(--muted);padding:12px;text-align:center}
+
+    @media (max-width:900px){.wrap{grid-template-columns:1fr;max-width:420px}}
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Bienvenue sur EverFrost</h1>
-    <a href="register.html">S'inscrire</a>
-    <a href="login.html">Se connecter</a>
+  <div class="wrap" role="main">
+    <div class="hero">
+      <h1>KEverFrost</h1>
+      <p>Crée un compte ou connecte-toi.</p>
+      <div class="features">
+        <div class="feat">Sécurisé (hein kenzo???)</div>
+        <div class="feat">Actif</div>
+        <div class="feat">--------</div>
+        <div class="feat">-*------</div>
+      </div>
+      <div style="margin-top:auto;color:var(--muted);font-size:13px">Des suggestions? https://discord.gg/kMrbV584P6</div>
+    </div>
+
+    <div class="card">
+      <div class="tabs" role="tablist">
+        <div class="tab active" id="tab-login">Connexion</div>
+        <div class="tab" id="tab-register">Inscription</div>
+      </div>
+
+      <div id="messages" aria-live="polite"></div>
+
+      <!-- LOGIN -->
+      <form id="login-form" autocomplete="on">
+        <label for="login-email">E‑mail</label>
+        <input id="login-email" type="email" required placeholder="ton@email.com">
+
+        <label for="login-password">Mot de passe</label>
+        <input id="login-password" type="password" required placeholder="••••••••">
+
+        <div class="meta">
+          <button class="btn primary" type="submit">Se connecter</button>
+          <button class="btn ghost" type="button" id="to-register">Créer un compte</button>
+        </div>
+      </form>
+
+      <!-- REGISTER -->
+      <form id="register-form" style="display:none" autocomplete="on">
+        <label for="reg-username">Pseudo</label>
+        <input id="reg-username" type="text" required placeholder="Ton pseudo">
+
+        <label for="reg-email">E‑mail</label>
+        <input id="reg-email" type="email" required placeholder="ton@email.com">
+
+        <label for="reg-password">Mot de passe</label>
+        <input id="reg-password" type="password" required placeholder="Au moins 6 caractères">
+
+        <label for="reg-password2">Confirmer le mot de passe</label>
+        <input id="reg-password2" type="password" required placeholder="Confirmer le mot de passe">
+
+        <div class="row">
+          <button class="btn primary" type="submit">S'inscrire</button>
+          <button class="btn ghost" type="button" id="to-login">Déjà inscrit ?</button>
+        </div>
+      </form>
+
+      <footer>© Kylita — <span id="ver">v1.0</span></footer>
+    </div>
   </div>
+
+  <!-- Firebase (v8 compat) -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+
+  <script>
+    // Your Firebase configuration (provided)
+const firebaseConfig = {
+  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+  authDomain: "message-957c6.firebaseapp.com",
+  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "message-957c6",
+  storageBucket: "message-957c6.firebasestorage.app",
+  messagingSenderId: "518720941529",
+  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+  measurementId: "G-GW0GKGQ9EP"
+};
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.database();
+
+    // UI elements
+    const tabLogin = document.getElementById('tab-login');
+    const tabRegister = document.getElementById('tab-register');
+    const loginForm = document.getElementById('login-form');
+    const registerForm = document.getElementById('register-form');
+    const messages = document.getElementById('messages');
+
+    function showMessage(text, type='error'){
+      messages.innerHTML = `<div class="${type==='ok'?'success':'error'}">${text}</div>`;
+      setTimeout(()=>{ if(messages.firstChild) messages.firstChild.remove() }, 6000);
+    }
+
+    // Tabs
+    tabLogin.addEventListener('click', ()=>{
+      tabLogin.classList.add('active'); tabRegister.classList.remove('active');
+      loginForm.style.display = ''; registerForm.style.display = 'none';
+    });
+    tabRegister.addEventListener('click', ()=>{
+      tabRegister.classList.add('active'); tabLogin.classList.remove('active');
+      registerForm.style.display = ''; loginForm.style.display = 'none';
+    });
+    document.getElementById('to-register').addEventListener('click', ()=> tabRegister.click());
+    document.getElementById('to-login').addEventListener('click', ()=> tabLogin.click());
+
+    // Register
+    registerForm.addEventListener('submit', async (e)=>{
+      e.preventDefault();
+      const username = document.getElementById('reg-username').value.trim();
+      const email = document.getElementById('reg-email').value.trim();
+      const pass = document.getElementById('reg-password').value;
+      const pass2 = document.getElementById('reg-password2').value;
+
+      if(!username || username.length < 2) return showMessage('Le pseudo doit contenir au moins 2 caractères.');
+      if(pass.length < 6) return showMessage('Le mot de passe doit contenir au moins 6 caractères.');
+      if(pass !== pass2) return showMessage('Les mots de passe ne correspondent pas.');
+
+      try{
+        const userCredential = await auth.createUserWithEmailAndPassword(email, pass);
+        const user = userCredential.user;
+        // Update display name
+        await user.updateProfile({displayName: username});
+        // Save profile in Realtime Database under /users/{uid}
+        const now = Date.now();
+        await db.ref('users/' + user.uid).set({
+          displayName: username,
+          email: email,
+          createdAt: now
+        });
+        showMessage('Inscription réussie — redirection en cours...', 'ok');
+        // Redirect to your app home (customize)
+        setTimeout(()=>{ window.location.href = 'home.html'; }, 900);
+      }catch(err){
+        console.error(err);
+        showMessage(err.message || 'Erreur lors de la création de compte.');
+      }
+    });
+
+    // Login
+    loginForm.addEventListener('submit', async (e)=>{
+      e.preventDefault();
+      const email = document.getElementById('login-email').value.trim();
+      const pass = document.getElementById('login-password').value;
+      try{
+        await auth.signInWithEmailAndPassword(email, pass);
+        showMessage('Connexion réussie — redirection...', 'ok');
+        setTimeout(()=>{ window.location.href = 'home.html'; }, 700);
+      }catch(err){
+        console.error(err);
+        showMessage('Impossible de se connecter : ' + (err.message || 'Erreur'));
+      }
+    });
+
+    // Listen to auth state (optional)
+    auth.onAuthStateChanged(user => {
+      if(user){
+        console.log('Utilisateur connecté:', user.uid, user.email);
+        // If you want to auto redirect logged-in users to home, uncomment:
+        // if(location.pathname.includes('login')) window.location.href = 'home.html';
+      } else {
+        console.log('Aucun utilisateur connecté');
+      }
+    });
+
+    // Optional: simple password reset flow (by email)
+    function addResetLink(){
+      const resetBtn = document.createElement('button');
+      resetBtn.className = 'btn ghost'; resetBtn.type='button'; resetBtn.textContent='Mot de passe oublié ?';
+      resetBtn.addEventListener('click', ()=>{
+        const email = prompt('Entrez votre adresse e‑mail pour recevoir un lien de réinitialisation :');
+        if(!email) return;
+        auth.sendPasswordResetEmail(email).then(()=> showMessage('E‑mail de réinitialisation envoyé.', 'ok')).catch(e=> showMessage(e.message || 'Erreur'));
+      });
+      // append to login form
+      loginForm.appendChild(resetBtn);
+    }
+    addResetLink();
+
+  </script>
 </body>
 </html>
