--- a/home.html
+++ b/home.html
@@ -1,299 +1,157 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>EverFrost - Home</title>
-<style>
-  /* Reset / base */
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    margin: 0; padding: 0; font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background: #0e1621;
-    color: #c3d0d8;
-  }
-  header {
-    background: #152238;
-    padding: 12px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 2px solid #4061f4;
-  }
-  #logo {
-    font-weight: 900;
-    font-size: 1.6rem;
-    color: #4061f4;
-  }
-  nav button {
-    background: #4061f4;
-    border: none;
-    color: white;
-    padding: 8px 14px;
-    margin-left: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: 600;
-    transition: background-color 0.3s;
-  }
-  nav button:hover {
-    background: #3051c4;
-  }
-
-  main {
-    display: flex;
-    height: calc(100vh - 56px);
-    gap: 10px;
-    padding: 15px 20px;
-  }
-
-  /* Left panel - serveurs */
-  #serverPanel {
-    background: #1c2940;
-    width: 220px;
-    border-radius: 8px;
-    padding: 12px;
-    display: flex;
-    flex-direction: column;
-  }
-  #serverPanel h2 {
-    margin: 0 0 12px 0;
-    font-weight: 700;
-    color: #81a2ff;
-  }
-  #serverList {
-    flex-grow: 1;
-    overflow-y: auto;
-  }
-  .server-item {
-    background: #4061f4;
-    padding: 8px;
-    border-radius: 6px;
-    margin-bottom: 8px;
-    cursor: pointer;
-    color: white;
-    user-select: none;
-    transition: background-color 0.3s;
-  }
-  .server-item:hover, .server-item.selected {
-    background: #3051c4;
-  }
-  #addServerForm {
-    margin-top: 12px;
-  }
-  #addServerForm input[type="text"] {
-    width: calc(100% - 90px);
-    padding: 6px 8px;
-    border-radius: 5px;
-    border: none;
-  }
-  #addServerForm button {
-    width: 80px;
-    margin-left: 8px;
-  }
-
-  /* Right panel - contenu (chat, shop, transactions) */
-  #contentPanel {
-    flex-grow: 1;
-    background: #182a49;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  /* Tabs */
-  #tabs {
-    display: flex;
-    border-bottom: 2px solid #4061f4;
-  }
-  #tabs button {
-    flex-grow: 1;
-    background: transparent;
-    border: none;
-    color: #9bb0ff;
-    padding: 12px 0;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  #tabs button.active {
-    background: #4061f4;
-    color: white;
-    border-radius: 8px 8px 0 0;
-  }
-
-  /* Tab content */
-  .tab-content {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 15px;
-    color: #c3d0d8;
-  }
-
-  /* Chat */
-  #messages {
-    height: 350px;
-    background: #1f365f;
-    border-radius: 8px;
-    padding: 12px;
-    overflow-y: auto;
-    font-size: 14px;
-    line-height: 1.3;
-    margin-bottom: 10px;
-  }
-  #chatInputContainer {
-    display: flex;
-  }
-  #chatInput {
-    flex-grow: 1;
-    padding: 8px 12px;
-    border-radius: 6px 0 0 6px;
-    border: none;
-    font-size: 14px;
-  }
-  #sendBtn {
-    background: #4061f4;
-    border: none;
-    color: white;
-    padding: 8px 14px;
-    border-radius: 0 6px 6px 0;
-    cursor: pointer;
-  }
-  #sendBtn:hover {
-    background: #3051c4;
-  }
-
-  /* Shop */
-  #shopSection {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
-  #enterpriseList {
-    max-height: 160px;
-    overflow-y: auto;
-    border: 1px solid #4061f4;
-    border-radius: 6px;
-    padding: 8px;
-    background: #1c2940;
-  }
-  .enterprise-item {
-    border-bottom: 1px solid #4061f4;
-    padding: 6px 0;
-    cursor: pointer;
-  }
-  .enterprise-item:last-child {
-    border-bottom: none;
-  }
-  .enterprise-item.selected {
-    background: #4061f4;
-    color: white;
-    border-radius: 4px;
-  }
-  #articleList {
-    max-height: 160px;
-    overflow-y: auto;
-    border: 1px solid #4061f4;
-    border-radius: 6px;
-    padding: 8px;
-    background: #1c2940;
-  }
-  .article-item {
-    border-bottom: 1px solid #4061f4;
-    padding: 6px 0;
-  }
-  .article-item:last-child {
-    border-bottom: none;
-  }
-
-  /* Transaction */
-  #transactionList {
-    max-height: 530px;
-    overflow-y: auto;
-    border: 1px solid #4061f4;
-    border-radius: 6px;
-    padding: 8px;
-    background: #1c2940;
-    font-size: 14px;
-  }
-
-  /* Forms */
-  input[type="text"], input[type="number"] {
-    background: #233454;
-    border: 1px solid #4061f4;
-    color: #c3d0d8;
-  }
-  button {
-    font-family: inherit;
-  }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Chat simple - KykyChat (Firebase)</title>
+  <style>
+    :root{--bg:#0f1724;--card:#0b1220;--accent:#60a5fa;--muted:#9aa4b2;--bubble:#0b1a2b}
+    html,body{height:100%;margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial}
+    body{background:linear-gradient(180deg,#071022 0%,#08172a 100%);display:flex;align-items:center;justify-content:center;padding:24px;color:#e6eef6}
+    .container{width:100%;max-width:760px;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:12px;box-shadow:0 8px 30px rgba(2,6,23,0.6);overflow:hidden;border:1px solid rgba(255,255,255,0.03)}
+    header{display:flex;align-items:center;justify-content:space-between;padding:16px 20px;border-bottom:1px solid rgba(255,255,255,0.02)}
+    header h1{font-size:16px;margin:0}
+    header .user{font-size:13px;color:var(--muted)}
+    main{display:grid;grid-template-rows:1fr auto;min-height:480px}
+    #messages{padding:18px;overflow:auto;display:flex;flex-direction:column;gap:10px;background-image:linear-gradient(0deg, rgba(255,255,255,0.01), transparent)}
+    .msg{max-width:78%;padding:10px 12px;border-radius:10px;background:var(--bubble);box-shadow:inset 0 -1px 0 rgba(255,255,255,0.02)}
+    .meta{font-size:12px;color:var(--muted);margin-bottom:6px}
+    .mine{align-self:flex-end;background:linear-gradient(180deg, rgba(96,165,250,0.15), rgba(96,165,250,0.06));border:1px solid rgba(96,165,250,0.1)}
+    .controls{display:flex;gap:8px;padding:12px;border-top:1px solid rgba(255,255,255,0.02);background:linear-gradient(180deg, transparent, rgba(0,0,0,0.02));align-items:center}
+    .controls input[type=text]{flex:1;padding:10px 12px;border-radius:8px;border:1px solid rgba(255,255,255,0.03);background:transparent;color:inherit;font-size:14px}
+    .controls button{padding:10px 14px;border-radius:8px;border:none;background:var(--accent);color:#04223a;font-weight:600;cursor:pointer}
+    .small{font-size:12px;color:var(--muted)}
+    .empty{opacity:0.7;text-align:center;padding:40px;color:var(--muted)}
+  </style>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <h1>Chat simple — KykyChat</h1>
+      <div class="user">Connecté en tant que <strong id="usernameDisplay">...</strong></div>
+    </header>
 
-<header>
-  <div id="logo">EverFrost</div>
-  <nav>
-    <button id="settingsBtn">⚙️ Paramètres</button>
-    <button id="logoutBtn">Déconnexion</button>
-  </nav>
-</header>
+    <main>
+      <div id="messages">
+        <div class="empty">Chargement des messages…</div>
+      </div>
 
-<main>
-  <section id="serverPanel">
-    <h2>Mes Serveurs</h2>
-    <div id="serverList">
-      <!-- Serveurs ajoutés ici -->
-    </div>
-    <form id="addServerForm">
-      <input type="text" id="newServerName" placeholder="Nom du serveur" required />
-      <button type="submit">Ajouter</button>
-    </form>
-  </section>
-
-  <section id="contentPanel">
-    <div id="tabs">
-      <button class="tabBtn active" data-tab="chatTab">Chat</button>
-      <button class="tabBtn" data-tab="shopTab">Shop</button>
-      <button class="tabBtn" data-tab="transactionTab">Transactions</button>
-    </div>
-
-    <div id="chatTab" class="tab-content">
-      <div id="messages"></div>
-      <div id="chatInputContainer">
-        <input id="chatInput" type="text" placeholder="Écrire un message..." autocomplete="off" />
+      <div class="controls">
+        <input id="messageInput" type="text" placeholder="Écris un message..." autocomplete="off" />
         <button id="sendBtn">Envoyer</button>
       </div>
-    </div>
+    </main>
+  </div>
 
-    <div id="shopTab" class="tab-content" style="display:none;">
-      <h3>Entreprises</h3>
-      <div id="enterpriseList"></div>
+  <script type="module">
+    // ------------- CONFIG FIREBASE (utilise la config que tu as fournie) -------------
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
+  authDomain: "kylita-f2923.firebaseapp.com",
+  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
+  projectId: "kylita-f2923",
+  storageBucket: "kylita-f2923.firebasestorage.app",
+  messagingSenderId: "431823530994",
+  appId: "1:431823530994:web:88a07e633751686e5ad96b",
+  measurementId: "G-F4LLNWQJ16"
+};
 
-      <form id="addEnterpriseForm">
-        <input type="text" id="enterpriseName" placeholder="Nom entreprise" required />
-        <button type="submit">Créer entreprise</button>
-      </form>
+    // Imports (Firebase modular SDK)
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js';
+    import { getDatabase, ref, push, onChildAdded, query, limitToLast, orderByChild } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js';
 
-      <h3>Articles</h3>
-      <div id="articleList"></div>
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const messagesRef = ref(db, 'messages');
 
-      <form id="addArticleForm">
-        <input type="text" id="articleTitle" placeholder="Titre article" required />
-        <input type="text" id="articleDescription" placeholder="Description (optionnel)" />
-        <input type="number" id="articlePrice" placeholder="Prix (diamants)" min="1" required />
-        <button type="submit">Ajouter article</button>
-      </form>
-    </div>
+    // ---------- Helpers UI ----------
+    const usernameDisplay = document.getElementById('usernameDisplay');
+    const messagesEl = document.getElementById('messages');
+    const input = document.getElementById('messageInput');
+    const sendBtn = document.getElementById('sendBtn');
 
-    <div id="transactionTab" class="tab-content" style="display:none;">
-      <h3>Historique des transactions</h3>
-      <div id="transactionList"></div>
-    </div>
-  </section>
-</main>
+    // Récupère le pseudo depuis : 1) localStorage 'username' 2) param URL '?username=...' 3) prompt
+    function getUsername(){
+      const url = new URL(window.location.href);
+      let name = url.searchParams.get('username') || localStorage.getItem('username');
+      if(!name){
+        name = prompt('Entrez votre pseudo pour le chat :') || 'Invité';
+        localStorage.setItem('username', name);
+      }
+      return name;
+    }
 
-<script type="module" src="home.js"></script>
+    const username = getUsername();
+    usernameDisplay.textContent = username;
+
+    // échappe le texte pour éviter l'injection HTML simple
+    function escapeHtml(str){
+      return String(str)
+        .replace(/&/g, '&amp;')
+        .replace(/</g, '&lt;')
+        .replace(/>/g, '&gt;')
+        .replace(/"/g, '&quot;')
+        .replace(/'/g, '&#039;');
+    }
+
+    // affiche un message dans la zone messages
+    function renderMessage(obj){
+      // retire le placeholder 'empty' si présent
+      const empty = messagesEl.querySelector('.empty');
+      if(empty) empty.remove();
+
+      const div = document.createElement('div');
+      div.className = 'msg' + (obj.name === username ? ' mine' : '');
+
+      const meta = document.createElement('div');
+      meta.className = 'meta';
+      const time = new Date(obj.timestamp || Date.now());
+      meta.innerHTML = `${escapeHtml(obj.name)} · <span class="small">${time.toLocaleString()}</span>`;
+
+      const body = document.createElement('div');
+      body.innerHTML = escapeHtml(obj.text);
+
+      div.appendChild(meta);
+      div.appendChild(body);
+      messagesEl.appendChild(div);
+
+      // garder le scroll en bas
+      messagesEl.scrollTop = messagesEl.scrollHeight;
+    }
+
+    // écoute les nouveaux messages (limite aux 200 derniers affichés pour performance)
+    const recentQuery = query(messagesRef, orderByChild('timestamp'));
+    onChildAdded(recentQuery, (snap) => {
+      const data = snap.val();
+      if(!data) return;
+      renderMessage(data);
+    });
+
+    // envoi du message
+    async function sendMessage(){
+      const text = input.value.trim();
+      if(!text) return;
+      const payload = { name: username, text, timestamp: Date.now() };
+      try{
+        await push(messagesRef, payload);
+        input.value = '';
+        input.focus();
+      }catch(err){
+        console.error('Erreur en envoyant le message', err);
+        alert('Impossible d\'envoyer le message — vérifie la connexion ou les règles Firebase.');
+      }
+    }
+
+    sendBtn.addEventListener('click', sendMessage);
+    input.addEventListener('keydown', (e) => { if(e.key === 'Enter') sendMessage(); });
+
+    // focus automatique
+    input.focus();
+
+    // petite protection : vide la zone après 1h d'inactivité (optionnel)
+    // setInterval(() => { /* housekeeping si besoin */ }, 60_000);
+
+  </script>
 </body>
 </html>
