--- a/home.html
+++ b/home.html
@@ -44,114 +44,95 @@
   </div>
 
   <script type="module">
-    // ------------- CONFIG FIREBASE (utilise la config que tu as fournie) -------------
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+// ===== CONFIG FIREBASE =====
 const firebaseConfig = {
-  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
-  authDomain: "kylita-f2923.firebaseapp.com",
-  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
-  projectId: "kylita-f2923",
-  storageBucket: "kylita-f2923.firebasestorage.app",
-  messagingSenderId: "431823530994",
-  appId: "1:431823530994:web:88a07e633751686e5ad96b",
-  measurementId: "G-F4LLNWQJ16"
+  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+  authDomain: "message-957c6.firebaseapp.com",
+  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "message-957c6",
+  storageBucket: "message-957c6.firebasestorage.app",
+  messagingSenderId: "518720941529",
+  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+  measurementId: "G-GW0GKGQ9EP"
 };
 
-    // Imports (Firebase modular SDK)
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js';
-    import { getDatabase, ref, push, onChildAdded, query, limitToLast, orderByChild } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js';
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.database();
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const messagesRef = ref(db, 'messages');
+let username = null;
+const usernameDisplay = document.getElementById("usernameDisplay");
+const messagesEl = document.getElementById("messages");
+const input = document.getElementById("messageInput");
+const sendBtn = document.getElementById("sendBtn");
 
-    // ---------- Helpers UI ----------
-    const usernameDisplay = document.getElementById('usernameDisplay');
-    const messagesEl = document.getElementById('messages');
-    const input = document.getElementById('messageInput');
-    const sendBtn = document.getElementById('sendBtn');
-
-    // Récupère le pseudo depuis : 1) localStorage 'username' 2) param URL '?username=...' 3) prompt
-    function getUsername(){
-      const url = new URL(window.location.href);
-      let name = url.searchParams.get('username') || localStorage.getItem('username');
-      if(!name){
-        name = prompt('Entrez votre pseudo pour le chat :') || 'Invité';
-        localStorage.setItem('username', name);
-      }
-      return name;
-    }
-
-    const username = getUsername();
-    usernameDisplay.textContent = username;
-
-    // échappe le texte pour éviter l'injection HTML simple
-    function escapeHtml(str){
-      return String(str)
-        .replace(/&/g, '&amp;')
-        .replace(/</g, '&lt;')
-        .replace(/>/g, '&gt;')
-        .replace(/"/g, '&quot;')
-        .replace(/'/g, '&#039;');
-    }
-
-    // affiche un message dans la zone messages
-    function renderMessage(obj){
-      // retire le placeholder 'empty' si présent
-      const empty = messagesEl.querySelector('.empty');
-      if(empty) empty.remove();
-
-      const div = document.createElement('div');
-      div.className = 'msg' + (obj.name === username ? ' mine' : '');
-
-      const meta = document.createElement('div');
-      meta.className = 'meta';
-      const time = new Date(obj.timestamp || Date.now());
-      meta.innerHTML = `${escapeHtml(obj.name)} · <span class="small">${time.toLocaleString()}</span>`;
-
-      const body = document.createElement('div');
-      body.innerHTML = escapeHtml(obj.text);
-
-      div.appendChild(meta);
-      div.appendChild(body);
-      messagesEl.appendChild(div);
-
-      // garder le scroll en bas
-      messagesEl.scrollTop = messagesEl.scrollHeight;
-    }
-
-    // écoute les nouveaux messages (limite aux 200 derniers affichés pour performance)
-    const recentQuery = query(messagesRef, orderByChild('timestamp'));
-    onChildAdded(recentQuery, (snap) => {
-      const data = snap.val();
-      if(!data) return;
-      renderMessage(data);
+// ===== AUTH & RÉCUPÉRATION DU PSEUDO =====
+auth.onAuthStateChanged(user => {
+  if (user) {
+    const uid = user.uid;
+    db.ref("users/" + uid + "/displayName").once("value").then(snap => {
+      username = snap.val() || "Invité";
+      usernameDisplay.textContent = username;
     });
+  } else {
+    // Redirection si non connecté
+    window.location.href = "index.html";
+  }
+});
 
-    // envoi du message
-    async function sendMessage(){
-      const text = input.value.trim();
-      if(!text) return;
-      const payload = { name: username, text, timestamp: Date.now() };
-      try{
-        await push(messagesRef, payload);
-        input.value = '';
-        input.focus();
-      }catch(err){
-        console.error('Erreur en envoyant le message', err);
-        alert('Impossible d\'envoyer le message — vérifie la connexion ou les règles Firebase.');
-      }
-    }
+// ===== ENVOI DU MESSAGE =====
+function sendMessage() {
+  const text = input.value.trim();
+  if (!text || !username) return;
+  
+  db.ref("messages").push({
+    name: username,
+    text: text,
+    timestamp: Date.now()
+  });
+  
+  input.value = "";
+  input.focus();
+}
 
-    sendBtn.addEventListener('click', sendMessage);
-    input.addEventListener('keydown', (e) => { if(e.key === 'Enter') sendMessage(); });
+sendBtn.addEventListener("click", sendMessage);
+input.addEventListener("keydown", e => {
+  if (e.key === "Enter") sendMessage();
+});
 
-    // focus automatique
-    input.focus();
+// ===== AFFICHAGE DES MESSAGES =====
+function escapeHtml(str) {
+  return String(str)
+    .replace(/&/g, "&amp;")
+    .replace(/</g, "&lt;")
+    .replace(/>/g, "&gt;")
+    .replace(/"/g, "&quot;")
+    .replace(/'/g, "&#039;");
+}
 
-    // petite protection : vide la zone après 1h d'inactivité (optionnel)
-    // setInterval(() => { /* housekeeping si besoin */ }, 60_000);
+function renderMessage(obj) {
+  const div = document.createElement("div");
+  div.className = "msg" + (obj.name === username ? " mine" : "");
+  
+  const meta = document.createElement("div");
+  meta.className = "meta";
+  meta.innerHTML = `${escapeHtml(obj.name)} · <span class="small">${new Date(obj.timestamp).toLocaleString()}</span>`;
+  
+  const body = document.createElement("div");
+  body.innerHTML = escapeHtml(obj.text);
+  
+  div.appendChild(meta);
+  div.appendChild(body);
+  messagesEl.appendChild(div);
+  
+  messagesEl.scrollTop = messagesEl.scrollHeight;
+}
 
+// Écoute en temps réel des messages
+db.ref("messages").orderByChild("timestamp").limitToLast(200).on("child_added", snap => {
+  const data = snap.val();
+  if (data) renderMessage(data);
+});
   </script>
 </body>
 </html>
